--- a/sources/elasticsearch-clear-indexes.yaml
+++ b/sources/elasticsearch-clear-indexes.yaml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: elasticsearch-clear-indexes
-          image: {{ .Values.elasticsearchClearIndexes.job.image.repository }}:{{ .Values.elasticsearchClearIndexes.job.image.tag }}
+          image: onlyoffice/docs-utils:8.1.0-1
           command: ["/bin/sh", "-c"]
           args: ["/elasticsearch-clear-indexes.sh"]
           env:
