Replace images with utils (#200)
* Replace images (except nginx) with docs-utils

* Change image to utils for init container and make change-volume-owner optional

* Add conditional initContainers logic

* Move image value to values.yaml

* Change the image name for manual elasticsearch-clear-indexes

* Add image parametres block for changeVolumeOwner and fix parameters in comments

* Change description for resources inside changeVolumeOwner

* Replace image values

* Fix image value for change-volume-owner

--- a/templates/jobs/elasticsearch-clear-indexes.yaml
+++ b/templates/jobs/elasticsearch-clear-indexes.yaml
@@ -68,7 +68,7 @@ spec:
       {{- end }}
       containers:
         - name: elasticsearch-clear-indexes
-          image: mysql:8.0.36-debian
+          image: {{ .Values.elasticsearchClearIndexes.job.image.repository }}:{{ .Values.elasticsearchClearIndexes.job.image.tag }}
           {{- if or .Values.containerSecurityContext.enabled .Values.elasticsearchClearIndexes.job.containerSecurityContext.enabled }}
           {{- $csc := dict }}
           {{- if .Values.elasticsearchClearIndexes.job.containerSecurityContext.enabled }}
