--- a/values.yaml
+++ b/values.yaml
@@ -283,9 +283,9 @@ initContainers:
   checkDB:
     image:
       # initContainers.checkDB.image.repository check-db initContainer image repository
-      repository: mysql
+      repository: onlyoffice/docs-utils
       # initContainers.checkDB.image.tag check-db initContainer image tag
-      tag: latest
+      tag: 8.0.1-1
       # initContainers.checkDB.image.pullPolicy check-db initContainer image pull policy
       pullPolicy: IfNotPresent
     # check-db initContainer resource requests and limits
@@ -3753,6 +3753,14 @@ elasticsearchClearIndexes:
     # elasticsearchClearIndexes.job.enabled Enable the execution of job elasticsearchClearIndexes before upgrading DocSpace
     # If you are using Opensearch or an external Elasticsearch, you can set it to `false`
     enabled: true
+    # Elasticsearch-clear-indexes container image parameters
+    image:
+      # elasticsearchClearIndexes.job.image.repository elasticsearchClearIndexes container image repository
+      repository: onlyoffice/docs-utils
+      # elasticsearchClearIndexes.job.image.tag elasticsearchClearIndexes container image tag
+      tag: 8.1.0-1
+      # elasticsearchClearIndexes.job.image.pullPolicy elasticsearchClearIndexes container image pull policy
+      pullPolicy: IfNotPresent
     # elasticsearchClearIndexes.job.annotations Defines annotations that will be additionally added to elasticsearchClearIndexes Job
     # If set to, it takes priority over the `commonAnnotations`
     # You can also use `tpl` as the value for the key
@@ -3859,33 +3867,44 @@ opensearch:
   # If set to, it takes priority over the `tolerations`
   tolerations: []
   initContainers:
-    # Configure a Security Context for Opensearch change-volume-owner initContainer container in Pod
-    securityContext:
-      # opensearch.initContainers.securityContext.enabled Enable security context for Opensearch change-volume-owner initContainer container in pod
-      enabled: false
-      # opensearch.initContainers.securityContext.runAsUser User ID for the Opensearch change-volume-owner initContainer container
-      runAsUser: 0
-      # opensearch.initContainers.securityContext.allowPrivilegeEscalation Controls whether a process can gain more privileges than its parent process
-      allowPrivilegeEscalation: false
-      # opensearch.initContainers.securityContext.seLinuxOptions Defines SELinux labels for the Opensearch change-volume-owner initContainer container
-      seLinuxOptions: {}
-      # opensearch.initContainers.securityContext.seccompProfile Defines the Seccomp profile for the Opensearch change-volume-owner initContainer container
-      seccompProfile:
-        type: RuntimeDefault
-      # opensearch.initContainers.securityContext.capabilities Defines the privileges granted to the process
-      capabilities:
-        drop: ["ALL"]
-    # Opensearch change-volume-owner initContainer resource requests and limits
-    # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
-    # opensearch.initContainers.resources.requests The requested resources for the Opensearch change-volume-owner initContainer
-    # opensearch.initContainers.resources.limits The resources limits for the Opensearch change-volume-owner initContainer
-    resources:
-      requests:
-        memory: "256Mi"
-        cpu: "100m"
-      limits:
-        memory: "1Gi"
-        cpu: "1000m"
+    # Enable security context for Opensearch change-volume-owner initContainer container in pod
+    changeVolumeOwner:
+      enabled: true
+      # Change volume owner container image parameters
+      image:
+        # opensearch.initContainers.changeVolumeOwner.image.repository Change volume owner container image repository
+        repository: onlyoffice/docs-utils
+        # opensearch.initContainers.changeVolumeOwner.image.tag Change volume owner container image tag
+        tag: 8.1.0-1
+        # opensearch.initContainers.changeVolumeOwner.image.pullPolicy Change volume owner container image pull policy
+        pullPolicy: IfNotPresent
+      # Configure a Security Context for Opensearch change-volume-owner initContainer container in Pod
+      securityContext:
+        # opensearch.initContainers.changeVolumeOwner.securityContext.enabled Enable security context for Opensearch change-volume-owner initContainer container in pod
+        enabled: true
+        # opensearch.initContainers.changeVolumeOwner.securityContext.runAsUser User ID for the Opensearch change-volume-owner initContainer container
+        runAsUser: 0
+        # opensearch.initContainers.changeVolumeOwner.securityContext.allowPrivilegeEscalation Controls whether a process can gain more privileges than its parent process
+        allowPrivilegeEscalation: false
+        # opensearch.initContainers.changeVolumeOwner.securityContext.seLinuxOptions Defines SELinux labels for the Opensearch change-volume-owner initContainer container
+        seLinuxOptions: {}
+        # opensearch.initContainers.changeVolumeOwner.securityContext.seccompProfile Defines the Seccomp profile for the Opensearch change-volume-owner initContainer container
+        seccompProfile:
+          type: RuntimeDefault
+        # opensearch.initContainers.changeVolumeOwner.securityContext.capabilities Defines the privileges granted to the process
+        capabilities:
+          drop: ["ALL"]
+      # Opensearch change-volume-owner initContainer resource requests and limits
+      # ref: https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/
+      # opensearch.initContainers.changeVolumeOwner.resources.requests The requested resources for the Opensearch change-volume-owner initContainer
+      # opensearch.initContainers.changeVolumeOwner.resources.limits The resources limits for the Opensearch change-volume-owner initContainer
+      resources:
+        requests:
+          memory: "256Mi"
+          cpu: "100m"
+        limits:
+          memory: "1Gi"
+          cpu: "1000m"
     # opensearch.initContainers.custom Custom Opensearch initContainers parameters
     # Additional containers that run before Opensearch container in a Pod
     # Example:
