--- a/templates/applications/api-system.yaml
+++ b/templates/applications/api-system.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.apiSystem.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.apiSystem.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.apiSystem.containerPorts.app }}
           name: app
