--- a/templates/applications/document-server.yaml
+++ b/templates/applications/document-server.yaml
@@ -76,6 +76,9 @@ spec:
         {{- if .Values.docs.containerSecurityContext.enabled }}
         securityContext: {{- include "docspace.securityContext" .Values.docs.containerSecurityContext | nindent 10 }}
         {{- end }}
+        {{- if .Values.docs.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.docs.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.docs.containerPorts.http }}
           name: http
