--- a/templates/applications/files-services.yaml
+++ b/templates/applications/files-services.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.filesServices.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.filesServices.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.filesServices.containerPorts.app }}
           name: app
