--- a/templates/applications/healthchecks.yaml
+++ b/templates/applications/healthchecks.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.healthchecks.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.healthchecks.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.healthchecks.containerPorts.healthcheck }}
           name: healthcheck
