--- a/templates/applications/login.yaml
+++ b/templates/applications/login.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.login.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.login.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.login.containerPorts.login }}
           name: login
