--- a/templates/applications/notify.yaml
+++ b/templates/applications/notify.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.notify.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.notify.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.notify.containerPorts.app }}
           name: app
