--- a/templates/applications/opensearch.yaml
+++ b/templates/applications/opensearch.yaml
@@ -93,6 +93,9 @@ spec:
         {{- if .Values.opensearch.containerSecurityContext.enabled }}
         securityContext: {{- include "docspace.securityContext" .Values.opensearch.containerSecurityContext | nindent 10 }}
         {{- end }}
+        {{- if .Values.opensearch.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.opensearch.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: 9200
           name: http
