--- a/templates/applications/people-server.yaml
+++ b/templates/applications/people-server.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.peopleServer.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.peopleServer.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.peopleServer.containerPorts.app }}
           name: app
