--- a/templates/applications/studio-notify.yaml
+++ b/templates/applications/studio-notify.yaml
@@ -133,6 +133,9 @@ spec:
         {{- end }}
         securityContext: {{- include "docspace.securityContext" $csc | nindent 10 }}
         {{- end }}
+        {{- if .Values.studioNotify.lifecycleHooks }}
+        lifecycle: {{- toYaml .Values.studioNotify.lifecycleHooks | nindent 10 }}
+        {{- end }}
         ports:
         - containerPort: {{ .Values.studioNotify.containerPorts.app }}
           name: app
